--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,40 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+* {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  background-color: #f2f2f2;
 }
+.flex { display:flex; }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.content {
+  border-radius: 2px;
+  background-color:#fff;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
+  padding:10px;
 }
-
-.App-intro {
-  font-size: large;
+.page { max-width: 850px; margin: 0 auto;}
+body, h1, h2, h3, h4, h5, p, ul, li {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.col-30 {
+  width: 38%;
+}
+.col-60 {
+  width: 60%;
+}
+/* for buttons hover effect */
+.raise:hover,
+.raise:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em #333;
+  transform: translateY(-0.15em);
+}
+.grey-button {
+	background-image: radial-gradient(circle at 50% 0,#fff,#f1eceb);
+	height: 35px;
+	border-radius: 2px;
+	border: 1px solid #ccc3c3;
+	font-size: 18px;
+	padding: 5px 20px;
 }
